--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,12 @@
 <h1> Welcome to your bookmark manager page! </h1>
 <br>
+
+<form action='/new-bookmark' method='post'>
+  <label> New bookmark name: </label>
+  <input type='text' name='new_bookmark_name'>
+  <input type='submit' value='Submit'>
+  </form>
+
 <a href="/bookmarks">
-       <button>View Bookmarks</button>
-     </a>
+  <button>View Bookmarks</button>
+</a>
