Wrapping Database data in Program Objects

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,8 +2,10 @@
 <br>
 
 <form action='/new-bookmark' method='post'>
-  <label> New bookmark name: </label>
-  <input type='text' name='new_bookmark_name'>
+  <label> New bookmark url: </label>
+  <input type='text' name='new_bookmark_url'>
+  <label> New bookmark title: </label>
+  <input type='text' name='new_bookmark_title'>
   <input type='submit' value='Submit'>
   </form>
 
