Abandoned attempt at Challenge 12

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,11 +1,11 @@
 <h1> Welcome to your bookmark manager page! </h1>
 <br>
 
-<form action='/new-bookmark' method='post'>
+<form action='/add-bookmark' method='post'>
   <label> New bookmark url: </label>
-  <input type='text' name='new_bookmark_url'>
+  <input type='text' name='url' placeholder='URL'>
   <label> New bookmark title: </label>
-  <input type='text' name='new_bookmark_title'>
+  <input type='text' name='title' placeholder='Title'>
   <input type='submit' value='Submit'>
   </form>
 
