--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -1,5 +1,5 @@
 <ul>
   <% @bookmarks.each do |bookmark| %>
-    <li><a href="<%= "#{bookmark[0]}" %>"><%= "#{bookmark[1]}" %></a></li>
+    <li><a href="<%= "#{bookmark.url}" %>"><%= "#{bookmark.title}" %></a></li>
   <% end %>
 </ul>
