--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -1,10 +1,11 @@
-
+  <% n = 1 %>
   <% @bookmarks.each do |bookmark| %>
-    <div id='<%= "delete-#{bookmark.id}" %>' class="bookmark-block">
+    <div id='<%= "bookmark-#{n}" %>' class="bookmark-block">
       <h2><a href="<%= "#{bookmark.url}" %>"><%= "#{bookmark.title}" %></a></h2>
       <form method="post" action="/delete-bookmark">
         <input type='hidden' name='id' value='<%= "#{bookmark.id}" %>'>
         <button>Delete</button>
       </form>
     </div>
+    <% n += 1 %>
   <% end %>
